--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,14 +9,18 @@
     "build": "npm run generate && npx tsc -b && npx vite build",
     "lint": "npx eslint .",
     "lint:fix": "npx eslint . --fix",
-    "preview": "npx vite preview"
+    "preview": "npx vite preview",
+    "test": "jest"
   },
   "dependencies": {
     "@polkadot-api/descriptors": "file:.papi/descriptors",
+    "@polkadot/api": "^16.4.8",
+    "@polkadot/util": "^13.5.6",
     "@rainbow-me/rainbowkit": "^2.2.8",
     "@wagmi/connectors": "^5.8.5",
     "@wagmi/core": "^2.17.3",
     "dotenv": "^17.2.2",
+    "ethers": "^6.15.0",
     "polkadot-api": "^1.18.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -27,6 +31,7 @@
   "devDependencies": {
     "@eslint/js": "^9.14.0",
     "@tanstack/react-query": "^5.81.5",
+    "@types/jest": "^30.0.0",
     "@types/node": "^22.16.2",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
@@ -37,8 +42,11 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.11.0",
+    "jest": "^30.1.3",
+    "jest-environment-jsdom": "^30.1.2",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14",
+    "ts-jest": "^29.4.4",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.12.2",
     "vite": "^7.0.4"
