--- a/contracts/package.json
+++ b/contracts/package.json
@@ -24,6 +24,8 @@
   },
   "dependencies": {
     "@polkadot-api/descriptors": "file:.papi/descriptors",
+    "@polkadot/api": "^16.4.8",
+    "@polkadot/util": "^13.5.6",
     "polkadot-api": "^1.18.0"
   }
 }
