--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -24,5 +24,5 @@
   "include": [
     "src",
     "wagmi.config.ts"
-  ]
+, "src/scripts/xcm-helpers.ts", "../contracts/scripts/createRemarkProposal.ts"  ]
 }
